fix spacing on non-longform variant

--- a/express/code/blocks/faqv2/faqv2.css
+++ b/express/code/blocks/faqv2/faqv2.css
@@ -694,6 +694,10 @@
   max-height: 0;
 }
 
+.faqv2.expandable:not(.longform) .faqv2-content {
+  padding-left: 21px;
+}
+
 .faqv2.expandable:not(.longform) .faqv2-content.open {
   margin-top: 0;
   padding: 0px 30px 16px 21px;
